// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Login component +++ fetch data for authorization error 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-container-1"
  maxWidth="xs"
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Typography))
      color="error"
      variant="caption"
    />
    <WithStyles(ForwardRef(Typography))
      color="textPrimary"
      variant="h5"
    >
      Вход в систему
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        error={404}
        label="Логин"
        margin="normal"
        name="login"
        onChange={[Function]}
        placeholder="Введите ваш логин"
        type="text"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        error={404}
        label="Пароль"
        margin="normal"
        name="password"
        onChange={[Function]}
        placeholder="Введите ваш пароль"
        type="password"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(Button))
      className="makeStyles-submit-2"
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Войти
    </WithStyles(ForwardRef(Button))>
  </form>
</WithStyles(ForwardRef(Container))>
`;

exports[`Tests Login component +++ fetch data for authorization success 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-container-1"
  maxWidth="xs"
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Typography))
      color="textPrimary"
      variant="h5"
    >
      Вход в систему
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Логин"
        margin="normal"
        name="login"
        onChange={[Function]}
        placeholder="Введите ваш логин"
        type="text"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Пароль"
        margin="normal"
        name="password"
        onChange={[Function]}
        placeholder="Введите ваш пароль"
        type="password"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(Button))
      className="makeStyles-submit-2"
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Войти
    </WithStyles(ForwardRef(Button))>
  </form>
</WithStyles(ForwardRef(Container))>
`;

exports[`Tests Login component +++ renderer component 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-container-1"
  maxWidth="xs"
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Typography))
      color="textPrimary"
      variant="h5"
    >
      Вход в систему
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Логин"
        margin="normal"
        name="login"
        onChange={[Function]}
        placeholder="Введите ваш логин"
        type="text"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Пароль"
        margin="normal"
        name="password"
        onChange={[Function]}
        placeholder="Введите ваш пароль"
        type="password"
        value=""
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(Button))
      className="makeStyles-submit-2"
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Войти
    </WithStyles(ForwardRef(Button))>
  </form>
</WithStyles(ForwardRef(Container))>
`;

exports[`Tests Login component +++ simulate of changing inputs value 1`] = `
<WithStyles(ForwardRef(Container))
  className="makeStyles-container-1"
  maxWidth="xs"
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Typography))
      color="textPrimary"
      variant="h5"
    >
      Вход в систему
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Логин"
        margin="normal"
        name="login"
        onChange={[Function]}
        placeholder="Введите ваш логин"
        type="text"
        value="test@test"
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(FormGroup))>
      <WithStyles(ForwardRef(TextField))
        label="Пароль"
        margin="normal"
        name="password"
        onChange={[Function]}
        placeholder="Введите ваш пароль"
        type="password"
        value="testtesttest"
        variant="outlined"
      />
    </WithStyles(ForwardRef(FormGroup))>
    <WithStyles(ForwardRef(Button))
      className="makeStyles-submit-2"
      color="primary"
      size="medium"
      type="submit"
      variant="contained"
    >
      Войти
    </WithStyles(ForwardRef(Button))>
  </form>
</WithStyles(ForwardRef(Container))>
`;
